43284 Optimisation des opérations sur le cache pour le gestionnaire de tâches